Index file updated.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <input type="button" class="sidebarButton" id="question8Button" value="8"><br>
 
             </div> 
+        <p>Sujal Patel </p>
             
             <div id="result" class="answers"></div> 
             <div id="questionSection" class="card"> 
